--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -56,11 +56,9 @@ crb:
   username: ${CRB_TOKEN_USERNAME:RWDU_bpr}
   password: ${CRB_TOKEN_PASSWORD:TmLcx+LlyzD29-P}
   infinity-code: ${CRB_TOKEN_INFINITY_CODE:rw123456789}
-  queue-capacity: ${QUEUE_CAPACITY:400}
-  consumer-threads: ${CONSUMER_THREADS:50}
-
   consumer-record-type: ${CONSUMER_RECORD_TYPE:IC}
   corporate-record-type: ${CORPORATE_RECORD_TYPE:CI}
+  thread-pool-size: 50
   failed-requests: ${FAILED_REQUESTS:FAILED}
   maximum-retries: 5
 
